# cairos-types

./: pyproject.toml
cairos_types/: core.py  houdini.py  skeleton.py
cairos_types/tests/: avatar_export_data_test.py  avatar_ingest_data_test.py  base_houdini_data_test.py  export_data_test.py  motion_test.py  sequencer_data_test.py
